ch7/7.2.2/cilium-networkpolicy/2.allow-only-icmp-allow.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-icmp-ping-policy"
spec:
  endpointSelector:
    matchExpressions:
      - key: "icmp"
        operator: "Exists"
  ingress:
    - fromEndpoints:
        - matchLabels:
            icmp: allow
      icmps:
        - fields:
          - type: 8
            family: IPv4
  egress:
    - toEndpoints:
        - matchLabels:
            icmp: allow
      icmps:
        - fields:
          - type: 8
            family: IPv4
